FormControl, FormGroup, FormBuilder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<app-top-bar></app-top-bar>
+<!-- <app-top-bar></app-top-bar>
 
 <div class="container">
   <router-outlet></router-outlet>
-</div>
+</div> -->
+
+<!-- <app-name-editor></app-name-editor> -->
+<app-profile-editor></app-profile-editor>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
